--- a/styles/_layouts.scss
+++ b/styles/_layouts.scss
@@ -1,7 +1,18 @@
 /* == Layouts == */
 
-//scale padding button details
+/*scale padding button details*/
 
+//inserirlo sull'oggetto per la transizione slow alla rimozione del mouse
+%start-scale-padding{
+    padding: 12px 24px;
+    transition: 0.1s;
+}
+
+//inserirlo sull'hover
+%scale-padding{
+    padding: 16px 28px;
+    transition: 0.1s;
+}
 
 /* Griglia giochi */
 
@@ -11,6 +22,8 @@
 
 
 /* Griglia articoli */
+
+//Teoricamente tutti gli aricoli in card futuri dovrebbero essere settati.
 @mixin article-card ($width){
     display: flex;
     position: relative;
@@ -57,14 +70,15 @@
 
 //inserirlo sull'oggetto per la transizione slow alla rimozione del mouse
 %shadow-start{ 
-    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.5);
+    box-shadow: 0px 3px 10px 0px rgba(0, 0, 0, 0.3);
     transform: translateY(0);
     transition: 0.5s;
 }
+
 //inserirlo sull'hover
 %shadow-hover{ 
     transform: translateY(-12px);
     z-index: 1;
     transition: 0.5s;
-    box-shadow: 0 20px 25px 0px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 20px 25px 0px rgba(0, 0, 0, 0.4);
 }
